2013-10-17  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (apply_hosts_preferences): New function.
	(attack_network): Call apply_hosts_preferences instead of checking and
	applying hosts related preferences.

2013-10-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Don't send plugin description.

2013-10-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_start_args): Remove hostname member. Add fqdn
	member.
	(attack_init_hostinfos_vhosts, attack_init_hostinfos): Add fqdn
	parameter. Set FQDN host info.
	(attack_start): Stringify host ip instead of using args hostname. Adjust
	attack init function calls. Rename hostname variable.
	(attack_network): Use openvas_host to get the fqdn in attack start args.

2013-10-04  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_network): Always use the string representation of
	IPv4 and IPv6 addresses when a hostname is provided.

2013-10-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (attack_network): Send error message to manager when a
	hostname is unresolvable.

2013-09-30  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/preferences.c (openvassd_defaults): Remove unused reverse_lookup
	value.

2013-09-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (send_plug_info): Remove unused variable "t".

2013-09-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/comm.c (send_plug_info): Always send NODESC for description
	instead of sending it only if the NVTI is a newstyle one.
	Also remove the ignoring of the NVTI in case no description is present
	because this is automatically void now.

2013-09-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 4.0+beta3.

2013-09-26  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Preparing the openvas-scanner 4.0+beta2 release.

	* CHANGES: Updated.
